syntax = "proto3";

package api.note_v1;

option go_package = "github.com/nechel11/grpc_lessons/pkg/note_v1";

service NoteService {
    rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse);
}

message CreateNoteRequest {
    string title = 1;
    string text = 2;
    string author = 3;
}

message CreateNoteResponse {
    int64 id = 1;
}